# PaddleDemo

fluid/inference_example/: CMakeLists.txt  README.md  example.cc
fluid/inference_example/model/: __model_combined__  __params_combined__
fluid/se_resnext/: reader.py  run.sh  se_resnext.py  test_executor.py  test_parallel_do.py  test_parallel_executor.py  train.py
gans/: README.md  dcgan.py
ocr_text_detection/: CMakeLists.txt  README.md  frcnn_reader.cpp  frcnn_reader.h  main.cpp
ocr_text_detection/models/: merge_model.py
tutorial/: infer1.py  infer2.py  test.py  train.py
